2021-09-28  Karl Berry  <karl@freefriends.org>

	Prepare for 42:2 (tb131) publication.
	
	* Makefile (more_options): show --webroot=/ as commented-out
	value to disable url validation.
	(testiss, lastiss, crossref_iss): 131.
	* lists-translations.txt (XSLT): new abbrev.
	* lists-unifications.txt,
	* capaccum.pl (accumulation_check) <@category_expected>: add TUG 2021.
	* lists-unifications.txt: tb131 authors.

	* capcrossref.pl (crossref_create_landing_page): maybe "this page"
	helps with doi self-ref.
	* cr-do-issue,
	* capconv.pl: doc.

2021-09-15  Karl Berry  <karl@freefriends.org>

	* tb37capsule.txt: %person|Roswitha Graham for Knuth interview.

2021-06-20  Karl Berry  <karl@freefriends.org>

	* tb55capsule.txt,
	* tb58capsule.txt,
	* tb62capsule.txt: use http(s) links for TL guides per bb request.

	* Makefile (diff-land): diff in more natural direction.
	(upload-test): new redirecting target.

2021-05-21  Karl Berry  <karl@freefriends.org>

	* tb128capsule.txt: zprav is a knuth session.

2021-05-19  Karl Berry  <karl@tug.org>

	* Makefile (lastiss): now 130.
	* tb130capsule.txt: published.
	* tb129capsule.txt: fully public.
	* tb66capsule.txt: better CTAN link for Catalogue.
	* lists-translations.txt (TUGboat Editors): txt transliteration.
	* lists-unifications.txt (James Alexander): aka J. C. Alexander.
	(TUGboat&#xa0;Editors): not needed.

2021-05-19  Karl Berry  <karl@freefriends.org>

	* tb128capsule.txt: /l/tug20-video, not tug2020.
	* tb130capsule.txt: 2021, not 2020. Something to check.

2021-05-09  Karl Berry  <karl@freefriends.org>

	* Makefile (diff-land): new test target.
	* capaccum-author.pl,
	* capaccum-keyword.pl,
	* capaccum-title.pl: formatting.

2021-05-04  Karl Berry  <karl@freefriends.org>

	* Makefile (cro-preserve): better name for cro target,
	since it seems usually we can use cro-scratch.

	* capcrossref.pl (crossref_create_landing_page): keep entities
	in the <title> string, but remove markup.
