@@ -1,3 +1,8 @@
+2021-09-30  Karl Berry  <karl@freefriends.org>
+
+	* README-process.txt: landing page update when previous
+	issue becomes public.
+
 2021-09-28  Karl Berry  <karl@freefriends.org>
 
 	* README: README-tug-procedures ref.
